--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
   <h1 style="color: #07F">A Colorful Website</h1>
-  <p>This is a website about color!</p>    
-  
+  <p>This is a website about color!</p>
+
   <h2 style="color: #C00">News</h2>
   <ul>
-    <li>Nothing going on (yet)</li>
+    <li>BRAAAANCH ME AND MERGE ME!</li>
   </ul>
 
   <h2>Navigation</h2>
