--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <h2 style="color: #C00">News</h2>
   <ul>
-    <li>BRAAAANCH ME AND MERGE ME!</li>
+    <li>BRAAAANCH ME AND MERGE ME! GOOD! now do it again one more time.</li>
   </ul>
 
   <h2>Navigation</h2>
