sorry (test2) okay.
give me some! (+6 squashed commits)
Squashed commits:
[c4bca07] lets get dirty.
[c331f41] excuse but i am master. no one deletes what i write!
[48ddc6b] -shit! again... not working.....
+pardoooonnn?????????
[933242b] not working. do it again.
[94ecd30] too explicit! fix language.
[efe74bc] play.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <h2 style="color: #C00">News</h2>
   <ul>
     <li>BRAAAANCH ME AND MERGE ME! GOOD! now do it again one more time. shit, wait someone has updated the master branch. all good, this has been merged correctly!</li>
+    <li>second time. after reset to last commit of the master, i got the latest master. cool, now i can
+    play.
+
+
+
+
+
+     </li>
   </ul>
 
   <h2>Navigation</h2>
@@ -22,6 +30,8 @@
       <a href="blue.html">The Blue Page</a>
     </li>
   </ul>
-shit!
+pardon.
+excuse but i am master. no one deletes what i write!
+sorry (test2)
 </body>
 </html>
