excuse but i am master. no one deletes what i write!

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <a href="blue.html">The Blue Page</a>
     </li>
   </ul>
-pardoooonnn?????????
+pardon.
+excuse but i am master. no one deletes what i write!
 </body>
 </html>
