--- a/crazy.html
+++ b/crazy.html
@@ -7,7 +7,7 @@
 <body>
   <h1>A Crazy Experiment</h1>
   <p>We're trying out a <span style="color: #F0F">crazy</span>
-  <span style="color: #06C">experiment</span>!
+  <span style="color: #06C">experimenting</span>! 
     
   <p><a href="index.html">Return to home page</a></p>
 </body>
